Working build and login
