# docs/swagger.json
@@ -25,7 +25,13 @@
                 "operationId": "GetEvents",
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/EventInfo"
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -63,6 +69,33 @@
             }
         },
         "/users": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get User",
+                "operationId": "GetUser",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User email",
+                        "name": "email",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            },
             "post": {
                 "produces": [
                     "application/json"
@@ -126,6 +159,38 @@
         }
     },
     "definitions": {
+        "EventInfo": {
+            "type": "object",
+            "properties": {
+                "attendees": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "dietaryInfo": {
+                    "type": "string"
+                },
+                "endTime": {
+                    "type": "integer"
+                },
+                "eventId": {
+                    "type": "integer"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "owner": {
+                    "$ref": "#/definitions/OwnerInfo"
+                },
+                "startTime": {
+                    "type": "integer"
+                }
+            }
+        },
         "LoginParams": {
             "type": "object",
             "required": [
@@ -151,7 +216,7 @@
                     "type": "string"
                 },
                 "end_time": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "location": {
                     "type": "string"
@@ -163,7 +228,7 @@
                     "type": "integer"
                 },
                 "start_time": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -180,6 +245,23 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "OwnerInfo": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "joinedAt": {
+                    "type": "string"
+                },
+                "lastName": {
                     "type": "string"
                 }
             }
